--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start-dev": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "serve": "http-server dist",
-    "test": "karma start"
+    "test": "karma start",
+    "e2e": "codeceptjs run --steps"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "@babel/preset-env": "^7.21.5",
     "@iconify/icons-dashicons": "^1.2.4",
     "babel-loader": "^9.1.2",
+    "codeceptjs": "^3.4.1",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "eslint": "^8.39.0",
@@ -26,6 +28,8 @@
     "html-webpack-plugin": "^5.5.1",
     "http-server": "^14.1.1",
     "iconify-icon": "^1.0.7",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-webpack-plugin": "^2.4.2",
     "jasmine-ajax": "^4.0.0",
     "jasmine-core": "^5.0.0",
     "karma": "^6.4.2",
@@ -35,8 +39,10 @@
     "karma-jasmine": "^5.1.0",
     "karma-sourcemap-loader": "^0.4.0",
     "karma-webpack": "^5.0.0",
+    "puppeteer": "^20.3.0",
     "sass": "^1.62.1",
     "sass-loader": "^13.2.2",
+    "sharp": "^0.32.1",
     "style-loader": "^3.3.2",
     "webpack": "^5.82.0",
     "webpack-cli": "^5.0.2",
@@ -46,6 +52,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "imagemin-pngquant": "^9.0.2",
     "regenerator-runtime": "^0.13.11",
     "workbox-window": "^6.5.4"
   }
