--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "codeceptjs": "^3.4.1",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
+    "css-minimizer-webpack-plugin": "^5.0.0",
     "eslint": "^8.39.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
@@ -46,6 +47,7 @@
     "sharp": "^0.32.1",
     "style-loader": "^3.3.2",
     "webpack": "^5.82.0",
+    "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.0.2",
     "webpack-dev-server": "^4.13.3",
     "webpack-merge": "^5.8.0",
@@ -54,6 +56,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "imagemin-pngquant": "^9.0.2",
+    "lazysizes": "^5.3.2",
     "regenerator-runtime": "^0.13.11",
     "workbox-window": "^6.5.4"
   }
